--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-DISCORD_TOKEN=MTQwMjY2NTIwNjI2MTQ4NTYxOA.GDbaFd.E5GCqhSTkmfGD6sN1BUDcKAdelQTRchSturt7U
+DISCORD_TOKEN=MTQwMjY2NTIwNjI2MTQ4NTYxOA.GzBocz.hqTOUDseanDJOKud9916VedhP3V4FpcwLlDYjY
 CLIENT_ID=1402665206261485618
 GUILD_ID=1402754155017142362
-PORT=3000
